@startuml BomberQuest_Simple_Class_Diagram

' Simplified version for quick rendering
skinparam classAttributeIconSize 0

' Main classes only
class BomberQuest {
    + main(String[]): void
}

class GameManager {
    + {static} getInstance(): GameManager
    + update(): void
    + render(Graphics2D): void
}

interface GameState {
    + update(GameManager): void
    + render(Graphics2D, GameManager): void
    + handleInput(int, GameManager): void
}

abstract class GameObject {
    + {abstract} render(Graphics2D, int): void
    + update(): void
}

class Player extends GameObject
class Enemy extends GameObject
class Bomb extends GameObject
class Wall extends GameObject

class EntityFactory {
    + {static} createWall(...): GameObject
    + {static} createEnemy(...): Enemy
    + {static} createBomb(...): Bomb
}

class SoundManager {
    + {static} getInstance(): SoundManager
    + playMusic(String): void
    + playSFX(String): void
}

class SettingsManager {
    + {static} getInstance(): SettingsManager
}

class LeaderboardManager {
    + {static} getInstance(): LeaderboardManager
}

' States
class MainMenuState implements GameState
class PlayingState implements GameState
class GameOverState implements GameState
class VictoryState implements GameState

' Main relationships
BomberQuest --> GameManager
GameManager --> GameState
GameManager --> GameObject
GameManager ..> EntityFactory
GameManager ..> SoundManager
GameManager ..> SettingsManager

@enduml
